templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /helm-demo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: demo-service
                port:
                  number: 8080
